<resources>
    <string name="app_name">Grocery App</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_to">Welcome to</string>
    <string name="lorem_ipsum_dolor_sit_amet_consetetur_sadipscing_elitr_sed_diam_nonumy">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy</string>
    <string name="buy_quality_dairy_products">Buy Quality Dairy Products</string>
    <string name="welcome">Welcome</string>
    <string name="continue_with_google">Continue with google</string>
    <string name="create_an_account">Create an account</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="login">Login</string>
    <string name="user">USER</string>
    <string name="google_logo">GOOGLE_LOGO</string>
    <string name="introoneimage">INTROONEIMAGE</string>
    <string name="welcome_back">Welcome back !</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password</string>
    <string name="don_t_have_an_account">Don’t have an account ?</string>
    <string name="sign_up">Sign up</string>
    <string name="back_arrow">back_arrow</string>
    <string name="create_account">Create account</string>
    <string name="quickly_create_account">Quickly create account</string>
    <string name="email_img">email_img</string>
    <string name="phone_number">Phone number</string>
    <string name="signup">Signup</string>
    <string name="logout">Logout</string>
    <string name="subtotal">Subtotal</string>
    <string name="doller">$</string>
    <string name="_0_0">0.0</string>
    <string name="shipping_charges">Shipping charges</string>
    <string name="total">Total</string>
    <string name="checkout">Checkout</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="price_range">Price Range</string>
    <string name="star_rating">Star Rating</string>
    <string name="stars">stars</string>
    <string name="others">Others</string>
    <string name="discount">Discount</string>
    <string name="free_shipping">Free shipping</string>
    <string name="same_day_delivery">Same day delivery</string>
    <string name="categories">Categories</string>
    <string name="x">x</string>
    <string name="fresh_broccoli">Fresh Broccoli</string>
    <string name="_1_50_lbs">1.50 lbs</string>
    <string name="_20_off_on_your_first_purchase">20% off on your first purchase</string>
    <string name="vegetables">Vegetables</string>
    <string name="_16">-16%</string>
    <string name="fresh_peach">Fresh Peach</string>
    <string name="dozen">dozen</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="search_keywords">Search keywords..</string>
    <string name="olivia_austin">Olivia Austin</string>
    <string name="oliviaaustin_gmail_com">oliviaaustin@gmail.com</string>
    <string name="about_me">About me</string>
    <string name="my_orders">My Orders</string>
    <string name="my_favorites">My Favorites</string>
    <string name="my_address">My Address</string>
    <string name="credit_cards">Credit Cards</string>
    <string name="transactions">Transactions</string>
    <string name="notifications">Notifications</string>
    <string name="sign_out">Sign out</string>
    <string name="new_NEW">NEW</string>
    <string name="personal_details">Personal Details</string>
    <string name="save_settings">Save settings</string>
    <string name="change_password">Change Password</string>
    <string name="add_address">Add Address</string>
    <string name="save_this_address">Save this address</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="add_image">Add image</string>
    <string name="capture_image_from_camera">Capture image from Camera</string>
    <string name="add_image_from_gallery">Add image from Gallery</string>
    <string name="default_111">DEFAULT</string>
    <string name="russell_austin">Russell Austin</string>
    <string name="_2811_crescent_day_la_port_california_united_states_77571">2811 Crescent Day. LA Port California, United States 77571</string>
    <string name="_9089788909">9089788909</string>
    <string name="todo">TODO</string>
    <string name="address_location">address_location</string>
    <string name="name">Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="addaddressicon">addAddressIcon</string>
    <string name="my_cards">My Cards</string>
    <string name="addcardicon">addCardIcon</string>
    <string name="allow_notifcations">Allow Notifcations</string>
    <string name="email_notifcations">Email Notifcations</string>
    <string name="order_notifcations">Order Notifcations</string>
    <string name="general_notifcations">General Notifcations</string>
    <string name="order_success">Order Success</string>
    <string name="your_order_was_succesfull">Your order was succesfull !</string>
    <string name="you_will_get_a_response_within_a_few_minutes">You will get a response within a few minutes.</string>
    <string name="track_order">Track order</string>
    <string name="shipping_method">Shipping Method</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="zip_code">Zip code</string>
    <string name="make_default">Make default</string>
    <string name="master_card">Master Card</string>
    <string name="_5678">5678</string>
    <string name="expiry">Expiry :</string>
    <string name="_01_22">01/22</string>
    <string name="cvv">CVV :</string>
    <string name="_908">908</string>
    <string name="name_on_the_card">Name on the card</string>
    <string name="card_number">Card number</string>
    <string name="mm_yy">MM/YY</string>
    <string name="openboxicon">openBoxIcon</string>
    <string name="order">Order #</string>
    <string name="placed_on">Placed on</string>
    <string name="octobar_19_2021">Octobar 19 2021</string>
    <string name="items">Items :</string>
    <string name="_10">10</string>
    <string name="price">price :</string>
    <string name="_0">0</string>
    <string name="upanddownicon">upAndDownIcon</string>
    <string name="_1">1</string>
    <string name="mastercardicon">masterCardIcon</string>
    <string name="dec_12_2021_at_10_00_pm">Dec 12 2021 at 10:00 pm</string>
    <string name="standard_delivery">Standard Delivery</string>
    <string name="order_will_be_delivered_between_3_4_business_days_straights_to_your_doorstep">Order will be delivered between 3 - 4 business days straights to your doorstep.</string>
    <string name="_3">$3</string>
    <string name="next_day_delivery">Next Day Delivery</string>
    <string name="_5">$5</string>
    <string name="nominated_delivery">Nominated Delivery</string>
    <string name="favorites">Favorites</string>
    <string name="order_placed">Order placed</string>
    <string name="oct_19_2021">Oct 19 2021</string>
    <string name="paypalicon">PaypalIcon</string>
    <string name="paypal">Paypal</string>
    <string name="creaditcardicon">creaditCardIcon</string>
    <string name="credit_card">Credit Card</string>
    <string name="applepayicon">applePayIcon</string>
    <string name="apple_pay">Apple pay</string>
    <string name="creditcardicon">creditCardIcon</string>
    <string name="month_year">Month / Year</string>
    <string name="save_this_card">Save this card</string>
    <string name="add_credit_card">Add Credit Card</string>
    <string name="organic_mountain_works_as_a_seller_for_many_organic_growers_of_organic_lemons_organic_lemons_are_easy_to_spot_in_your_produce_aisle_they_are_just_like_regular_lemons_but_they_will_usually_have_a_few_more_scars_on_the_outside_of_the_lemon_skin_organic_lemons_are_considered_to_be_the_world_s_finest_lemon_for_juicing">Organic Mountain works as a seller for many organic growers of organic lemons. Organic lemons are easy to spot in your produce aisle. They are just like regular lemons, but they will usually have a few more scars on the outside of the lemon skin. Organic lemons are considered to be the world\'s finest lemon for juicing</string>
    <string name="_89_reviews">(89 reviews)</string>
    <string name="plusicon">plusIcon</string>
    <string name="move_to_cart">Move to cart</string>
    <string name="your_cart_is_empty">Your cart is empty !</string>
</resources>