<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activity.AccountCreateActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="signup_bg"
        android:scaleType="fitStart"
        android:src="@drawable/maskthree"
        tools:ignore="HardcodedText" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:background="@drawable/layout_shadow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_13sdp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_14sdp"
            android:contentDescription="@string/back_arrow"
            android:src="@drawable/backarrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_94sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_358sdp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/login_card"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/horizontal_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center_vertical"
            android:text="@string/create_account"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quickly_create_account"
            android:textColor="@color/grey"
            android:textSize="@dimen/_12ssp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_21sdp"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_22sdp"
                    android:contentDescription="@string/email_img"
                    android:src="@drawable/email" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@color/white"

                    android:fontFamily="@font/poppins_medium"
                    android:hint="@string/email_address"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/grey"
                    android:textColorHint="@color/grey"
                    android:textSize="@dimen/_10ssp" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_3sdp"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_22sdp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/telephone" />

                <EditText
                    android:id="@+id/phonenum"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@color/white"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="@string/phone_number"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:textColor="@color/grey"
                    android:textColorHint="@color/grey"
                    android:textSize="@dimen/_10ssp" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_3sdp"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_22sdp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/lock" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="@dimen/_180sdp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:background="@color/white"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="@string/password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:textColor="@color/grey"
                    android:textColorHint="@color/grey"
                    android:textSize="@dimen/_10ssp" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/hide_pass"
                        android:layout_width="24dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="@dimen/_15sdp"
                        android:importantForAccessibility="no"
                        android:src="@drawable/hideview" />
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/signup_bottom"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_14sdp"
            android:background="@drawable/button"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:text="@string/signup"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/horizontal_padding"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/login_bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/login"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:indeterminateTint="@color/color_primary_dark"
        android:visibility="gone" />
</RelativeLayout>