<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white_first"
    android:fitsSystemWindows="true"
    tools:context=".ui.activity.OrderSuccessActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_15sdp"
            android:importantForAccessibility="no"
            android:src="@drawable/backarrowblack" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/order_success"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/track"
        android:layout_below="@+id/header"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/image"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/shop_green" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image"
            android:layout_marginHorizontal="@dimen/_90sdp"
            android:layout_marginTop="@dimen/_28sdp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center_horizontal"
            android:text="@string/your_order_was_succesfull"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text"
            android:layout_marginHorizontal="@dimen/_70sdp"
            android:layout_marginTop="@dimen/_13sdp"
            android:gravity="center_horizontal"
            android:text="@string/you_will_get_a_response_within_a_few_minutes"
            android:textColor="@color/grey"
            android:textSize="@dimen/_13ssp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/track"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="@dimen/horizontal_padding"
        android:layout_marginTop="@dimen/_14sdp"
        android:layout_marginBottom="@dimen/horizontal_padding"
        android:background="@drawable/button"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/track_order"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>
</RelativeLayout>